# fosh

./: Cargo.toml  build.rs
lib/: error_printer.rs
src/: main.rs
src/annotator/: mod.rs  parse_tree.rs  path_completer.rs
src/builtin/: annotator.rs  contributors.rs  entities.rs  entity.rs  mod.rs
src/builtin/engine/: annotator.rs  contributors.rs  entities.rs  mod.rs  parse_tree.rs
src/completer/: mod.rs  parse_tree.rs  path_completer.rs
src/parser/: ast.rs  cmd.lalrpop  mod.rs  tokenizer.rs
src/runtime/: command.rs  execution.rs  mod.rs
src/tui/: mod.rs  settings.rs
src/ui/: fosh.rs  mod.rs  tui.rs
