[package]
name = "fosh"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.19.8"

[dependencies]
termion="1.5.6"
keycodes = "0.1.0"
clib = "0.2.1"
nix = "0.25.0"
lalrpop-util = "0.19.8"
regex = "1"
downcast-rs = "1.2.0"
typed-arena = "2.0.1"
logos = "0.12.1"
rand = { version = "0.8.5" , features = ["small_rng"] }
pipe = "0.4.0"
parse-display-derive = "0.6.0"
atty = "0.2.14"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
futures = "0.3.25"


[[bin]]
name = "fosh"
path = "src/main.rs"

[lib]
name = "fosh"
path = "lib/lib.rs"
